--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Alien-LibJIT
-version = 0.01
+version = 0.02
 author  = Mattia Barbon <mattia@barbon.org>
 author  = Steffen Mueller <smueller@cpan.org>
 license = Perl_5
@@ -8,6 +8,7 @@ copyright_year   = 2013
 
 [Prereqs / BuildRequires]
 Module::Build = 0.3601
+File::ShareDir = 0
 
 [Prereqs / TestRequires]
 
