--- a/dist.ini
+++ b/dist.ini
@@ -8,9 +8,11 @@ copyright_year   = 2013
 
 [Prereqs / BuildRequires]
 Module::Build = 0.3601
-File::ShareDir = 0
 
 [Prereqs / TestRequires]
+
+[Prereqs]
+File::ShareDir = 0
 
 [@Filter]
 -bundle = @Basic
