--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Alien-LibJIT
-version = 0.02
+version = 0.03
 author  = Mattia Barbon <mattia@barbon.org>
 author  = Steffen Mueller <smueller@cpan.org>
 license = Perl_5
@@ -24,3 +24,4 @@ mb_class = Module::Build::AlienLibJIT
 [@Git]
 [PodSyntaxTests]
 [PodCoverageTests]
+[PodWeaver]
